# matvey-uk

./: .editorconfig  .gitignore  Dockerfile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-check.yaml  build-image.yaml  build-push-run.yaml  build-push.yaml  check.yaml  deploy.yaml  docker-push.yaml
app/: Cargo.toml  build.gradle.kts
app/assets/: style.css
app/src/: main.rs  routes.rs
app/src/main/kotlin/uk/matvey/app/: App.kt  AppConfig.kt  StartBot.kt  StartServer.kt
app/src/main/kotlin/uk/matvey/app/drinki/: DrinkiRouting.kt
app/src/main/kotlin/uk/matvey/app/wishlist/: WishlistItem.kt  WishlistRepo.kt  WishlistSql.kt  WishlistTg.kt
app/src/main/resources/: matvey-app.prod.conf  matvey.local.conf  matvey.prod.conf
app/src/main/resources/assets/: style.css
app/src/main/resources/db/migration/matvey/: V001__cards.sql  V001__wishlist.sql
app/src/main/resources/templates/: index.ftl  tech.ftl
app/src/routes/: index_route.rs
app/src/test/kotlin/uk/matvey/app/: AppTestFunctional.kt  ServerTest.kt
app/src/testFixtures/kotlin/uk/matvey/app/: AppTestFunctional.kt
begit/: build.gradle.kts
corsa/: build.gradle.kts
drinki/: build.gradle.kts
drinki/app/: build.gradle.kts
drinki/bot/: build.gradle.kts
dukt/: build.gradle.kts
falafel/: README.md  build.gradle.kts
kino/: build.gradle.kts
matvey/: build.gradle.kts
migraine/: build.gradle.kts
postal/: build.gradle.kts
slon/: build.gradle.kts
telek/: build.gradle.kts
titles/: build.gradle.kts
tmdb-client/: build.gradle.kts
(+330 files in other folders)
