[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.1", features = ["tracing"] }
leptos = "0.5.2"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
